style(header): reduce navbar menu text size to 14.5px to completely prevent vendors wrapping

--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -738,15 +738,15 @@ body {
    NAV MENU
 ========================= */
 .navbar-nav {
-    gap: 8px;
+    gap: 6px;
 }
 
 .navbar-nav .nav-link {
     color: #000 !important;
-    padding: 8px 8px;
+    padding: 8px 6px;
     transition: 0.3s;
     font-weight: 500;
-    font-size: 15.5px;
+    font-size: 14.5px;
     /* line-height: 100%; */
     letter-spacing: 0%;
     text-transform: uppercase;
@@ -770,7 +770,7 @@ body {
 .navbar-nav .nav-item:not(:last-child)::after {
     content: "";
     position: absolute;
-    right: -4px;
+    right: -3px;
     top: 20%;
     width: 1px;
     height: 30px;
